[gd_scene load_steps=8 format=3 uid="uid://brt512384idja"]

[ext_resource type="Texture2D" uid="uid://ds4eahx7yfhpr" path="res://images/whitebox_11.png" id="1_mkf8s"]
[ext_resource type="Texture2D" uid="uid://ce2fyokcpcfec" path="res://images/shot-2.png" id="1_tamys"]
[ext_resource type="Script" uid="uid://26tynx0fa0e6" path="res://scenes/bullet.gd" id="2_y25gk"]
[ext_resource type="PackedScene" uid="uid://ce5b5abbrl4ly" path="res://particlesystmeBullet.tscn" id="3_qncy5"]
[ext_resource type="AudioStream" uid="uid://mr3k4n1u7u33" path="res://sound/synthetic_explosion_1.mp3" id="4_eoqba"]
[ext_resource type="PackedScene" uid="uid://fkwor8c4fmsi" path="res://scenes/audio_stream_player_2d.tscn" id="6_tamys"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tamys"]
size = Vector2(6.85536, 3.14472)

[node name="Bullet" type="Sprite2D"]
z_index = 1
rotation = 6.28319
scale = Vector2(0.510392, 0.535082)
texture = ExtResource("1_tamys")
script = ExtResource("2_y25gk")
deathParticle = ExtResource("3_qncy5")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-4.37085, 0.495428)
target_position = Vector2(11.8143, 0.0238383)
hit_from_inside = true

[node name="istanceTimeout" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(0.888705, 0, 0.378163, 1)
show_behind_parent = true
scale = Vector2(0.177433, 0.159072)
texture = ExtResource("1_mkf8s")

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_eoqba")
volume_db = 24.0
pitch_scale = 30.0

[node name="vanishing" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioStreamPlayer2d" parent="." instance=ExtResource("6_tamys")]
position = Vector2(-0.191303, -0.0660934)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.538743, -9.09495e-13)
shape = SubResource("RectangleShape2D_tamys")

[connection signal="finished" from="explosion" to="." method="_on_explosion_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
